fix dark mode button

--- a/lab5/dark-mode.css
+++ b/lab5/dark-mode.css
@@ -32,13 +32,18 @@ header {
     transition: background-color 1s, color 1s;
 }
 
+#toggle-dark {
+    border: none;
+    background-color: var(--back-color);
+    transition: background-color 1s;
+}
 
 .material-symbols-rounded {
-  font-variation-settings:
-  'FILL' var(--fill),
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 48
+    font-variation-settings:
+        'FILL' var(--fill),
+        'wght' 400,
+        'GRAD' 0,
+        'opsz' 48
 }
 
 
@@ -95,8 +100,8 @@ footer {
 /* DARK-MODE */
 
 [data-theme="dark"] {
-    --back-color: darkgray;
-    --text-color: black;
+    --back-color: #3B3B3B;
+    --text-color: #F7F7F7;
     --fill: 0;
 }
 
